# usbip

./: Cargo.toml  LICENSE  NOTES.md  README.md
.github/workflows/: main.yml  stale.yml
examples/: cdc_acm_serial.rs  ftdi.rs  hid_keyboard.rs  host.rs  server.rs
src/: cdc.rs  consts.rs  device.rs  endpoint.rs  ftdi.rs  hid.rs  host.rs  interface.rs  lib.rs  server.rs  setup.rs  usbip_protocol.rs  util.rs
src/server/: async_server.rs  sync_server.rs
