[package]
name = "usbip"
version = "0.4.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jiegec/usbip"
description = "A library to run USB/IP server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "net", "io-util"] }
log = "0.4.16"
futures = "0.3.21"
num-traits = "0.2.14"
num-derive = "0.3.3"
rusb = "0.9.1"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.8.3"
