[package]
name = "usbip"
version = "0.6.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jiegec/usbip"
description = "A library to run USB/IP server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["rt", "net", "io-util", "sync"] }
log = "0.4.17"
num-traits = "0.2.15"
num-derive = "0.3.3"
rusb = "0.9.3"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
env_logger = "0.9.0"
